# simple-message-channels

./: CHANGELOG.md  NOTES.md  README.md  pyproject.toml  setup.cfg  tox.ini
simple_message_channels/: __init__.py  smc.py
test/: conftest.py  test_smc.py  test_version.py
